Compute restart_interval only for cycled experiments (SDATE > EDATE) with prognostic aerosols.

--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -37,7 +37,7 @@ config_fcst:
     - otherwise: !calc doc.partition_common.resources.run_gfsfcst
 
   restart_interval_gfs: !FirstTrue
-    - when: !calc doc.settings.cplchem == ".false."
+    - when: !calc ( doc.settings.cplchem == ".false." or tools.to_YMDH(doc.settings.SDATE) >= tools.to_YMDH(doc.settings.EDATE) )
       do: !calc doc.fv3_gfs_settings.restart_interval
     - otherwise: !FirstTrue
       - when: !calc doc.fv3_gfs_settings.restart_interval == "0"
