--- a/workflow/cases/prototype7.2-aero.yaml
+++ b/workflow/cases/prototype7.2-aero.yaml
@@ -56,7 +56,7 @@ case:
     DO_SPPT: false
     k_split: 2
     n_split: 6
-    fscav_aero: [ '*:0.2', 'so4:0.3','dust1:0.7', 'dust2:0.7', 'dust3:0.7', 'dust4:0.7', 'dust5:0.7','seas1:0.6', 'seas2:0.6', 'seas3:0.6', 'seas4:0.6', 'seas5:0.6' ]
+    fscav_aero: [ '*:0.4', 'so2:0.0', 'msa:0.0', 'dms:0.0', 'nh3:0.0', 'so4:0.5', 'bc1:0.6', 'bc2:0.6', 'dust1:0.7', 'dust2:0.7', 'dust3:0.7', 'dust4:0.7', 'dust5:0.7' ]
     layout:
        x: 12
        y: 16
