Modified: env/HERA.env env/JET.env env/ORION.env env/WCOSS_DELL_P3.env to prepend task number label. https://github.com/NOAA-EMC/global-workflow/issues/454

--- a/env/JET.env
+++ b/env/JET.env
@@ -18,7 +18,7 @@ if [[ "$PARTITION_BATCH" = "xjet" ]]; then
 elif [[ "$PARTITION_BATCH" = "vjet" ]]; then
   export npe_node_max=16
 fi
-export launcher="srun --export=ALL"
+export launcher="srun -l --export=ALL"
 
 # Configure STACK
 export OMP_STACKSIZE=2048000
