--- a/env/HERA.env
+++ b/env/HERA.env
@@ -14,7 +14,7 @@ fi
 step=$1
 
 export npe_node_max=40
-export launcher="srun --export=ALL"
+export launcher="srun -l --export=ALL"
 
 # Configure MPI environment
 #export I_MPI_ADJUST_ALLREDUCE=5
