Fix HERA slurm resource assignment issue (#495)   Modified:   env/HERA.env     unset SLURM_NTASKS_PER_NODE      (to fix gdasanaldiag issue)     Set using one node in APRUN_CYCLE and APRUN_GAUSFCANL with analysis      (to fix gdas/gfs gdasanalcalc gfsanalcalc gaussian_sfcanl.exe resource assignment issue)      (to fix gdas/gfs analysis global_cycle resource assignment issue)     Set using one node in APRUNCFP with eupd      (to fix eupd untar script resource assignment issue)   Modified:   parm/config/config.post     Move npe_dwn to config.resource   Modified:   parm/config/config.resources     Add logic to eval if running in-line post then fix the resource assignment issue

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -32,7 +32,7 @@ ulimit -a
 
 export job=${PBS_JOBNAME:-$step}
 export jobid=${job}.${PBS_JOBID:-$$}
-
+unset SLURM_NTASKS_PER_NODE
 
 if [ $step = "prep" -o $step = "prepbufr" ]; then
 
@@ -72,12 +72,12 @@ elif [ $step = "anal" ]; then
     export NTHREADS_CYCLE=${nth_cycle:-12}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     npe_cycle=${ntiles:-6}
-    export APRUN_CYCLE="$launcher -n $npe_cycle"
+    export APRUN_CYCLE="$launcher -N 1 -n $npe_cycle"
 
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-    export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
+    export APRUN_GAUSFCANL="$launcher -N 1 -n $npe_gausfcanl"
 
     export NTHREADS_CHGRES=${nth_echgres:-1}
     [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
@@ -126,7 +126,7 @@ elif [ $step = "eupd" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+    export APRUNCFP="$launcher -N 1 -n \$ncmd --multi-prog"
 
 elif [ $step = "fcst" ]; then
 
