Sync merge with operations branch for GFSv16.1.5
Refs: #399

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,14 +1,14 @@
 # External sub-modules of global-workflow
 
 [FV3GFS]
-tag = GFS.v16.0.16
+tag = GFS.v16.0.17
 local_path = sorc/fv3gfs.fd
 repo_url = https://github.com/ufs-community/ufs-weather-model.git
 protocol = git
 required = True
 
 [GSI]
-tag = gfsda.v16.1.1a
+tag = gfsda.v16.1.5
 local_path = sorc/gsi.fd
 repo_url = https://github.com/NOAA-EMC/GSI.git
 protocol = git
@@ -21,10 +21,10 @@ repo_url = https://github.com/NOAA-EMC/GLDAS.git
 protocol = git
 required = True
 
-[EMC_post]
+[UPP]
 tag = upp_gfsv16_release.v1.1.4
 local_path = sorc/gfs_post.fd
-repo_url = https://github.com/NOAA-EMC/EMC_post.git
+repo_url = https://github.com/NOAA-EMC/UPP.git
 protocol = git
 required = True
 
