WCOSS2 env file updates from testing
- adjust base MPI settings, add FI_OFI_RXM_*X_SIZE variables for the
forecast jobs, and add specific settings for anal jobs
- update APRUN_GSI, APRUN_ENKF, APRUN_FV3 launcher settings
- add wafsgcip block and MPIRUN setting to support wafsgcip job

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -20,10 +20,10 @@ export mpmd="--cpu-bind verbose,core cfp"
 export npe_node_max=128
 
 # Configure MPI environment
-export MPI_LABELIO=YES
-export MP_STDOUTMODE="ORDERED"
 export KMP_STACKSIZE=2048M
 export KMP_AFFINITY=scatter
+export MKL_CBWR=AVX2
+
 export job=${PBS_JOBNAME:-$step}
 export jobid=${job}.${PBS_JOBID:-$$}
 
@@ -43,11 +43,29 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
 
 elif [ $step = "anal" ]; then
 
+    # OMP settings
+    export OMP_PLACES=cores
+    export OMP_NUM_THREADS=$nth_anal
+    export MP_EAGER_LIMIT=165536
+    export MP_COREFILE_FORMAT=lite
+    export MP_EUIDEVELOP=min
+    export MP_EUIDEVICE=sn_all
+    export MP_EUILIB=us
+    export MP_MPILIB=mpich2
+    export MP_LABELIO=yes
+    export MP_SINGLE_THREAD=yes
+    export MP_USE_BULK_XFER=yes
+    export MP_SHARED_MEMORY=yes
+    #export MPICH_ALLTOALL_THROTTLE=0
+    export MP_COLLECTIVE_OFFLOAD=no
+    export KMP_STACKSIZE=1024m
+    export FI_OFI_RXM_SAR_LIMIT=3145728
+
     nth_max=$(($npe_node_max / $npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
-    export APRUN_GSI="$launcher -n ${npe_gsi:-${npe_anal:-$PBS_NP}} -ppn $npe_node_anal"
+    export APRUN_GSI="$launcher -n ${npe_gsi:-${npe_anal:-$PBS_NP}} -ppn $npe_node_anal --cpu-bind core --depth $NTHREADS_GSI"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
@@ -90,7 +108,7 @@ elif [ $step = "eobs" ]; then
 
     export NTHREADS_GSI=${nth_eobs:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
-    export APRUN_GSI="$launcher -n ${npe_gsi:-${npe_eobs:-$PBS_NP}} -ppn $npe_node_eobs"
+    export APRUN_GSI="$launcher -n ${npe_gsi:-${npe_eobs:-$PBS_NP}} -ppn $npe_node_eobs --cpu-bind core --depth $nth_eobs"
 
     export CFP_MP=${CFP_MP:-"NO"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -98,17 +116,26 @@ elif [ $step = "eobs" ]; then
 
 elif [ $step = "eupd" ]; then
 
+    export OMP_PLACES=cores
+    export OMP_NUM_THREADS=$nth_eupd
+    export OMP_STACKSIZE=2G
+    export MPICH_COLL_OPT_OFF=1
+    export FI_OFI_RXM_SAR_LIMIT=3145728
+
     nth_max=$(($npe_node_max / $npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
-    export APRUN_ENKF="$launcher -n ${npe_enkf:-${npe_eupd:-$PBS_NP}} -ppn $npe_node_eupd"
+    export APRUN_ENKF="$launcher -n ${npe_enkf:-${npe_eupd:-$PBS_NP}} -ppn $npe_node_eupd --cpu-bind core --depth $nth_eupd"
 
     export CFP_MP=${CFP_MP:-"NO"}
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher -np \$ncmd $mpmd"
 
 elif [ $step = "fcst" ]; then
+
+    export FI_OFI_RXM_RX_SIZE=40000
+    export FI_OFI_RXM_TX_SIZE=40000
 
     nth_max=$(($npe_node_max / $npe_node_fcst))
 
@@ -117,9 +144,9 @@ elif [ $step = "fcst" ]; then
     export cores_per_node=$npe_node_max
     if [ $CDUMP = "gdas" ]; then
       #export APRUN_FV3="$launcher ${npe_fv3:-${npe_fcst:-$PBS_NP}}"
-      export APRUN_FV3="$launcher -n ${npe_fcst:-$PBS_NP} -ppn $npe_node_fcst"
+      export APRUN_FV3="$launcher -n ${npe_fcst:-$PBS_NP} -ppn $npe_node_fcst --depth $NTHREADS_FV3"
     else
-      export APRUN_FV3="$launcher -n ${npe_fcst_gfs:-$PBS_NP} -ppn $npe_node_fcst"
+      export APRUN_FV3="$launcher -n ${npe_fcst_gfs:-$PBS_NP} -ppn $npe_node_fcst --depth $NTHREADS_FV3"
     fi
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
@@ -131,12 +158,15 @@ elif [ $step = "fcst" ]; then
 
 elif [ $step = "efcs" ]; then
 
+    export FI_OFI_RXM_RX_SIZE=40000
+    export FI_OFI_RXM_TX_SIZE=40000
+
     nth_max=$(($npe_node_max / $npe_node_efcs))
 
     export NTHREADS_FV3=${nth_efcs:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    export APRUN_FV3="$launcher -n ${npe_fv3:-${npe_efcs:-$PBS_NP}} -ppn $npe_node_efcs"
+    export APRUN_FV3="$launcher -n ${npe_fv3:-${npe_efcs:-$PBS_NP}} -ppn $npe_node_efcs --depth $NTHREADS_FV3"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
@@ -227,5 +257,8 @@ elif [ $step = "gempak" ]; then
     [[ $NTHREADS_GEMPAK -gt $nth_max ]] && export NTHREADS_GEMPAK=$nth_max
     export APRUN_GEMPAKCFP="$launcher -np \$ntasks $mpmd"
 
+elif [ $step = "wafsgcip" ]; then
+
+    export MPIRUN="$launcher -np $npe_wafsgcip $mpmd"
 
 fi
