Adjust anal MPI settings in WCOSS2 env file
- remove some unneeded settings and add OMP_STACKSIZE based on review by
DA folks

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -46,19 +46,7 @@ elif [ $step = "anal" ]; then
     # OMP settings
     export OMP_PLACES=cores
     export OMP_NUM_THREADS=$nth_anal
-    export MP_EAGER_LIMIT=165536
-    export MP_COREFILE_FORMAT=lite
-    export MP_EUIDEVELOP=min
-    export MP_EUIDEVICE=sn_all
-    export MP_EUILIB=us
-    export MP_MPILIB=mpich2
-    export MP_LABELIO=yes
-    export MP_SINGLE_THREAD=yes
-    export MP_USE_BULK_XFER=yes
-    export MP_SHARED_MEMORY=yes
-    #export MPICH_ALLTOALL_THROTTLE=0
-    export MP_COLLECTIVE_OFFLOAD=no
-    export KMP_STACKSIZE=1024m
+    export OMP_STACKSIZE=1G
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
     nth_max=$(($npe_node_max / $npe_node_anal))
