Add MPI settings to WCOSS2.env for eobs
- added MPI settings to eobs block of WCOSS2.env
- same settings as from anal block (for global_gsi.x)

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -43,7 +43,6 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
 
 elif [ $step = "anal" ]; then
 
-    # OMP settings
     export OMP_PLACES=cores
     export OMP_NUM_THREADS=$nth_anal
     export OMP_STACKSIZE=1G
@@ -91,6 +90,11 @@ elif [ $step = "gldas" ]; then
     export APRUN_GLDAS_DATA_PROC="$launcher -np $npe_gldas $mpmd"
 
 elif [ $step = "eobs" ]; then
+
+    export OMP_PLACES=cores
+    export OMP_NUM_THREADS=$nth_eobs
+    export OMP_STACKSIZE=1G
+    export FI_OFI_RXM_SAR_LIMIT=3145728
 
     nth_max=$(($npe_node_max / $npe_node_eobs))
 
