--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -61,7 +61,7 @@ elif [ $step = "anal" ]; then
     export NTHREADS_CYCLE=${nth_cycle:-14}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     npe_cycle=${ntiles:-6}
-    export APRUN_CYCLE="$launcher -n $npe_cycle"
+    export APRUN_CYCLE="$launcher -n $npe_cycle -ppn $npe_node_cycle --cpu-bind core --depth $NTHREADS_CYCLE"
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
@@ -81,7 +81,7 @@ elif [ $step = "gldas" ]; then
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
     [[ $NTHREADS_GLDAS -gt $nth_max ]] && export NTHREADS_GLDAS=$nth_max
-    export APRUN_GLDAS="$launcher -n $npe_gldas -ppn $npe_node_gldas"
+    export APRUN_GLDAS="$launcher -n $npe_gldas -ppn $npe_node_gldas --cpu-bind core --depth $nth_gldas"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
     [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
@@ -135,7 +135,6 @@ elif [ $step = "fcst" ]; then
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
     if [ $CDUMP = "gdas" ]; then
-      #export APRUN_FV3="$launcher ${npe_fv3:-${npe_fcst:-$PBS_NP}}"
       export APRUN_FV3="$launcher -n ${npe_fcst:-$PBS_NP} -ppn $npe_node_fcst --depth $NTHREADS_FV3"
     else
       export APRUN_FV3="$launcher -n ${npe_fcst_gfs:-$PBS_NP} -ppn $npe_node_fcst --depth $NTHREADS_FV3"
@@ -170,7 +169,7 @@ elif [ $step = "post" ]; then
 
     export NTHREADS_NP=${nth_np:-1}
     [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
-    export APRUN_NP="$launcher -n ${npe_np:-${npe_post:-$PBS_NP}} -ppn $npe_node_post"
+    export APRUN_NP="$launcher -n ${npe_np:-${npe_post:-$PBS_NP}} -ppn $npe_node_post --cpu-bind core --depth $NTHREADS_NP"
 
     export NTHREADS_DWN=${nth_dwn:-1}
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
@@ -182,7 +181,7 @@ elif [ $step = "ecen" ]; then
 
     export NTHREADS_ECEN=${nth_ecen:-$nth_max}
     [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
-    export APRUN_ECEN="$launcher -n ${npe_ecen:-$PBS_NP} -ppn $npe_node_ecen"
+    export APRUN_ECEN="$launcher -n ${npe_ecen:-$PBS_NP} -ppn $npe_node_ecen --cpu-bind core --depth $NTHREADS_ECEN"
 
     export NTHREADS_CHGRES=${nth_chgres:-14}
     [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
@@ -194,7 +193,7 @@ elif [ $step = "ecen" ]; then
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
-    export APRUN_CYCLE="$launcher -n $npe_ecen"
+    export APRUN_CYCLE="$launcher -n $npe_ecen -ppn $npe_node_cycle --cpu-bind core --depth $NTHREADS_CYCLE"
 
 elif [ $step = "esfc" ]; then
 
@@ -202,11 +201,11 @@ elif [ $step = "esfc" ]; then
 
     export NTHREADS_ESFC=${nth_esfc:-$nth_max}
     [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
-    export APRUN_ESFC="$launcher -n ${npe_esfc:-$PBS_NP} -ppn $npe_node_esfc"
+    export APRUN_ESFC="$launcher -n ${npe_esfc:-$PBS_NP} -ppn $npe_node_esfc --cpu-bind core --depth $NTHREADS_ESFC"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
-    export APRUN_CYCLE="$launcher -n $npe_esfc"
+    export APRUN_CYCLE="$launcher -n $npe_esfc -ppn $npe_node_cycle --cpu-bind core --depth $NTHREADS_CYCLE"
 
 elif [ $step = "epos" ]; then
 
@@ -214,7 +213,7 @@ elif [ $step = "epos" ]; then
 
     export NTHREADS_EPOS=${nth_epos:-$nth_max}
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
-    export APRUN_EPOS="$launcher -n ${npe_epos:-$PBS_NP} -ppn $npe_node_epos"
+    export APRUN_EPOS="$launcher -n ${npe_epos:-$PBS_NP} -ppn $npe_node_epos --cpu-bind core --depth $NTHREADS_EPOS"
 
 elif [ $step = "fv3ic" ]; then
 
