Change nth_gldas to NTHREADS_GLDAS
Co-authored-by: Rahul Mahajan <aerorahul@users.noreply.github.com>

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -81,7 +81,7 @@ elif [ $step = "gldas" ]; then
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
     [[ $NTHREADS_GLDAS -gt $nth_max ]] && export NTHREADS_GLDAS=$nth_max
-    export APRUN_GLDAS="$launcher -n $npe_gldas -ppn $npe_node_gldas --cpu-bind core --depth $nth_gldas"
+    export APRUN_GLDAS="$launcher -n $npe_gldas -ppn $npe_node_gldas --cpu-bind core --depth $NTHREADS_GLDAS"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
     [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
