Change nth_eupd to NTHREADS_ENKF
Co-authored-by: Rahul Mahajan <aerorahul@users.noreply.github.com>

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -118,7 +118,7 @@ elif [ $step = "eupd" ]; then
 
     export NTHREADS_ENKF=${nth_eupd:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
-    export APRUN_ENKF="$launcher -n ${npe_enkf:-${npe_eupd:-$PBS_NP}} -ppn $npe_node_eupd --cpu-bind core --depth $nth_eupd"
+    export APRUN_ENKF="$launcher -n ${npe_enkf:-${npe_eupd:-$PBS_NP}} -ppn $npe_node_eupd --cpu-bind core --depth $NTHREADS_ENKF"
 
     export CFP_MP=${CFP_MP:-"NO"}
     export USE_CFP=${USE_CFP:-"YES"}
