WCOSS2 env file updates for efcs and waveawipsbulls
- add two MPI settings needed to successfully run efcs jobs
- add "unset PERL5LIB" for waveawipsbulls job to get past error at
runtime: ListUtil.c: loadable library and perl binaries are mismatched
- unsetting the PERL5LIB variable helps, based on research about error

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -146,6 +146,8 @@ elif [ $step = "fcst" ]; then
 
 elif [ $step = "efcs" ]; then
 
+    export MPICH_MPIIO_HINTS="*:romio_cb_write=disable"
+    export FI_OFI_RXM_SAR_LIMIT=3145728
     export FI_OFI_RXM_RX_SIZE=40000
     export FI_OFI_RXM_TX_SIZE=40000
 
@@ -248,5 +250,9 @@ elif [ $step = "gempak" ]; then
 elif [ $step = "wafsgcip" ]; then
 
     export MPIRUN="$launcher -np $npe_wafsgcip $mpmd"
+
+elif [ $step = "waveawipsbulls" ]; then
+
+    unset PERL5LIB
 
 fi
