Start of env and parm/config changes for atmanal

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -4,6 +4,7 @@ if [ $# -ne 1 ]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
+    echo "atmanal"
     echo "anal fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -49,6 +50,12 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
     if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
+
+elif [ $step = "atmanal" ]; then
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
 elif [ $step = "anal" ]; then
 
