Add APRUN_ATMANAL to ORION env

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -57,6 +57,12 @@ elif [ $step = "atmanal" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
+    nth_max=$(($npe_node_max / $npe_node_atmanalrun))
+
+    export NTHREADS_ATMANAL=${nth_atmanalrun:-$nth_max}
+    [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
+    export APRUN_ATMANAL="$launcher"
+
 elif [ $step = "anal" ]; then
 
     export MKL_NUM_THREADS=4
