--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -84,8 +84,9 @@ elif [ $step = "gldas" ]; then
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
     [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
-    export APRUN_GAUSSIAN="$launcher -n $npe_gaussian"
+    export APRUN_GAUSSIAN="$launcher -n $npe_gaussian -ppn $npe_node_gaussian --cpu-bind core --depth $NTHREADS_GAUSSIAN"
 
+    export USE_CFP=${USE_CFP:-"YES"}
     export APRUN_GLDAS_DATA_PROC="$launcher -np $npe_gldas $mpmd"
 
 elif [ $step = "eobs" ]; then
