--- a/env/ORION.env
+++ b/env/ORION.env
@@ -51,7 +51,7 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
 
-elif [ $step = "atmanal" ]; then
+elif [ $step = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
