--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -20,7 +20,7 @@ export mpmd="--cpu-bind verbose,core cfp"
 export npe_node_max=128
 
 # Configure MPI environment
-export MKL_CBWR=AVX2
+#export MKL_CBWR=AVX2
 
 export job=${PBS_JOBNAME:-$step}
 export jobid=${job}.${PBS_JOBID:-$$}
