--- a/sorc/fbwndgfs.fd/makefile.GENERIC
+++ b/sorc/fbwndgfs.fd/makefile.GENERIC
@@ -40,7 +40,7 @@ OBJS=   fbwndgfs.o
 # CMD		Name of the executable
 # PROFLIB	Library needed for profiling
 #
-FC =	        ifort
+FC =	        ftn
 LDFLAGS =	
 LIBS = ${W3NCO_LIB8} ${W3EMC_LIB8} ${BACIO_LIB8} ${IP_LIB8} ${SP_LIB8}
 CMD =		fbwndgfs
