--- a/sorc/syndat_maksynrc.fd/makefile
+++ b/sorc/syndat_maksynrc.fd/makefile
@@ -1,7 +1,7 @@
 SHELL=		/bin/sh
 #LIBS=		-L/nwprod/lib -lw3nco_v2.0.5_4 -lbacio_v2.0.1_4 
 ##LIBS_SYN_MAK=		-L/contrib/nceplibs/nwprod/lib -lw3nco_v2.0.5_4 -lbacio_v2.0.1_4 
-FC=		ifort   
+FC=		ftn
 #DEBUG =          -ftrapuv -check all -check nooutput_conversion -fp-stack-check -fstack-protector
 FFLAGS=		-O3 -g -traceback -assume noold_ldout_format $(DEBUG)
 LDFLAGS=	
