--- a/sorc/syndat_qctropcy.fd/makefile
+++ b/sorc/syndat_qctropcy.fd/makefile
@@ -1,7 +1,7 @@
 SHELL=		/bin/sh
 #LIBS=		-L/nwprod/lib -lw3nco_v2.0.5_8
 ##LIBS=		-L/contrib/nceplibs/nwprod/lib -lw3nco_v2.0.5_8
-FC=		ifort
+FC=		ftn
 #DEBUG =		-ftrapuv -check all -check noarg_temp_created -fp-stack-check -fstack-protector
 ## if '-check all' enabled, include '-check noarg_temp_created' to avoid warning msgs indicating 
 ##   slight performance hit due to chosen method of passing array arguments to w3difdat  
