--- a/sorc/vint.fd/makefile
+++ b/sorc/vint.fd/makefile
@@ -1,7 +1,7 @@
 SHELL=  /bin/sh
 ISIZE = 4
 RSIZE = 8
-COMP=   ifort
+COMP=   ftn
 ##INC = /contrib/nceplibs/nwprod/lib/incmod/g2_d
 ##LIBS=   -L/contrib/nceplibs/nwprod/lib -lw3emc_d -lw3nco_d -lg2_d -lbacio_4 -ljasper -lpng -lz
 LDFLAGS=
