Update to WCOSS2 env file for waveprep job
- remove unneeded MP_PULSE=0 setting; it's set in JJOB script
- add if-block to set NTASKS=$NTASK_gfs if CDUMP=gfs; this allows
waveprep to run with different # of tasks in gfs suite compared to gdas
suite settings

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -32,7 +32,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll"  -o $step = "wavepostpnt" ]; then
 
-    if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
+    if [ $step = "waveprep" -a $CDUMP = "gfs" ]; then NTASKS=$NTASKS_gfs ; fi
     export wavempexec="$launcher -np"
     export wave_mpmd=${mpmd}
 
