--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -24,8 +24,6 @@ export jobid=${job}.${PBS_JOBID:-$$}
 
 if [ $step = "prep" -o $step = "prepbufr" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_prep))
-
     export POE=${POE:-"YES"}
     export BACK=${BACK:-"off"}
     export sys_tp="wcoss2"
@@ -42,14 +40,10 @@ elif [ $step = "anal" ]; then
     export OMP_STACKSIZE=1G
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
-    nth_max=$(($npe_node_max / $npe_node_anal))
-
-    export NTHREADS_GSI=${nth_anal:-$nth_max}
-    [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
+    export NTHREADS_GSI=$nth_anal
     export APRUN_GSI="$launcher -n ${npe_gsi:-${npe_anal:-$PBS_NP}} -ppn $npe_node_anal --cpu-bind core --depth $NTHREADS_GSI"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
     export APRUN_CALCINC="$launcher \$ncmd"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
@@ -71,14 +65,10 @@ elif [ $step = "anal" ]; then
 
 elif [ $step = "gldas" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_gldas))
-
-    export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
-    [[ $NTHREADS_GLDAS -gt $nth_max ]] && export NTHREADS_GLDAS=$nth_max
+    export NTHREADS_GLDAS=$nth_gldas
     export APRUN_GLDAS="$launcher -n $npe_gldas -ppn $npe_node_gldas --cpu-bind core --depth $NTHREADS_GLDAS"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
-    [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
     export APRUN_GAUSSIAN="$launcher -n $npe_gaussian -ppn $npe_node_gaussian --cpu-bind core --depth $NTHREADS_GAUSSIAN"
 
     export USE_CFP=${USE_CFP:-"YES"}
@@ -90,10 +80,7 @@ elif [ $step = "eobs" ]; then
     export OMP_STACKSIZE=1G
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
-    nth_max=$(($npe_node_max / $npe_node_eobs))
-
-    export NTHREADS_GSI=${nth_eobs:-$nth_max}
-    [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
+    export NTHREADS_GSI=$nth_eobs
     export APRUN_GSI="$launcher -n ${npe_gsi:-${npe_eobs:-$PBS_NP}} -ppn $npe_node_eobs --cpu-bind core --depth $NTHREADS_GSI"
 
     export CFP_MP=${CFP_MP:-"NO"}
@@ -107,10 +94,7 @@ elif [ $step = "eupd" ]; then
     export MPICH_COLL_OPT_OFF=1
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
-    nth_max=$(($npe_node_max / $npe_node_eupd))
-
-    export NTHREADS_ENKF=${nth_eupd:-$nth_max}
-    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    export NTHREADS_ENKF=$nth_eupd
     export APRUN_ENKF="$launcher -n ${npe_enkf:-${npe_eupd:-$PBS_NP}} -ppn $npe_node_eupd --cpu-bind core --depth $NTHREADS_ENKF"
 
     export CFP_MP=${CFP_MP:-"NO"}
@@ -123,10 +107,7 @@ elif [ $step = "fcst" ]; then
     export FI_OFI_RXM_RX_SIZE=40000
     export FI_OFI_RXM_TX_SIZE=40000
 
-    nth_max=$(($npe_node_max / $npe_node_fcst))
-
-    export NTHREADS_FV3=${nth_fv3:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    export NTHREADS_FV3=$nth_fv3
     export cores_per_node=$npe_node_max
     if [ $CDUMP = "gdas" ]; then
       export APRUN_FV3="$launcher -n ${npe_fcst:-$PBS_NP} -ppn $npe_node_fcst --cpu-bind core --depth $NTHREADS_FV3"
@@ -134,11 +115,9 @@ elif [ $step = "fcst" ]; then
       export APRUN_FV3="$launcher -n ${npe_fcst_gfs:-$PBS_NP} -ppn $npe_node_fcst_gfs --cpu-bind core --depth $NTHREADS_FV3"
     fi
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
     export APRUN_REGRID_NEMSIO="$launcher -n $LEVS"
 
     export NTHREADS_REMAP=${nth_remap:-2}
-    [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
     export APRUN_REMAP="$launcher -n ${npe_remap:-${npe_fcst:-$PBS_NP}}"
 
 elif [ $step = "efcs" ]; then
@@ -148,35 +127,24 @@ elif [ $step = "efcs" ]; then
     export FI_OFI_RXM_RX_SIZE=40000
     export FI_OFI_RXM_TX_SIZE=40000
 
-    nth_max=$(($npe_node_max / $npe_node_efcs))
-
-    export NTHREADS_FV3=${nth_efcs:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    export NTHREADS_FV3=$nth_efcs
     export cores_per_node=$npe_node_max
     export APRUN_FV3="$launcher -n ${npe_fv3:-${npe_efcs:-$PBS_NP}} -ppn $npe_node_efcs --cpu-bind core --depth $NTHREADS_FV3"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
     export APRUN_REGRID_NEMSIO="$launcher -n $LEVS"
 
 elif [ $step = "post" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_post))
-
     export NTHREADS_NP=${nth_np:-1}
-    [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
     export APRUN_NP="$launcher -n ${npe_np:-${npe_post:-$PBS_NP}} -ppn $npe_node_post --cpu-bind core --depth $NTHREADS_NP"
 
     export NTHREADS_DWN=${nth_dwn:-1}
-    [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
     export APRUN_DWN="$launcher -np ${npe_dwn:-$PBS_NP} $mpmd"
 
 elif [ $step = "ecen" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_ecen))
-
-    export NTHREADS_ECEN=${nth_ecen:-$nth_max}
-    [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
+    export NTHREADS_ECEN=$nth_ecen
     export APRUN_ECEN="$launcher -n ${npe_ecen:-$PBS_NP} -ppn $npe_node_ecen --cpu-bind core --depth $NTHREADS_ECEN"
 
     export NTHREADS_CHGRES=${nth_chgres:-14}
@@ -184,7 +152,6 @@ elif [ $step = "ecen" ]; then
     export APRUN_CHGRES="time"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
     export APRUN_CALCINC="$launcher -n ${npe_ecen:-$PBS_NP}"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
@@ -193,10 +160,7 @@ elif [ $step = "ecen" ]; then
 
 elif [ $step = "esfc" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_esfc))
-
-    export NTHREADS_ESFC=${nth_esfc:-$nth_max}
-    [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
+    export NTHREADS_ESFC=$nth_esfc
     export APRUN_ESFC="$launcher -n ${npe_esfc:-$PBS_NP} -ppn $npe_node_esfc --cpu-bind core --depth $NTHREADS_ESFC"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
@@ -205,10 +169,7 @@ elif [ $step = "esfc" ]; then
 
 elif [ $step = "epos" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_epos))
-
-    export NTHREADS_EPOS=${nth_epos:-$nth_max}
-    [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
+    export NTHREADS_EPOS=$nth_epos
     export APRUN_EPOS="$launcher -n ${npe_epos:-$PBS_NP} -ppn $npe_node_epos --cpu-bind core --depth $NTHREADS_EPOS"
 
 elif [ $step = "fv3ic" ]; then
@@ -219,29 +180,19 @@ elif [ $step = "fv3ic" ]; then
 
 elif [ $step = "postsnd" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_postsnd))
-
     export NTHREADS_POSTSND=${nth_postsnd:-1}
-    [[ $NTHREADS_POSTSND -gt $nth_max ]] && export NTHREADS_POSTSND=$nth_max
     export APRUN_POSTSND="$launcher -n $npe_postsnd --depth=6 --cpu-bind depth"
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
-    [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
     export APRUN_POSTSNDCFP="$launcher -np $npe_postsndcfp $mpmd"
 
 elif [ $step = "awips" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_awips))
-
     export NTHREADS_AWIPS=${nth_awips:-2}
-    [[ $NTHREADS_AWIPS -gt $nth_max ]] && export NTHREADS_AWIPS=$nth_max
     export APRUN_AWIPSCFP="$launcher -np ${npe_awips:-$PBS_NP} $mpmd"
 
 elif [ $step = "gempak" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_gempak))
-
     export NTHREADS_GEMPAK=${nth_gempak:-1}
-    [[ $NTHREADS_GEMPAK -gt $nth_max ]] && export NTHREADS_GEMPAK=$nth_max
     export APRUN_GEMPAKCFP="$launcher -np \$ntasks $mpmd"
 
 elif [ $step = "waveawipsbulls" ]; then
