--- a/env/JET.env
+++ b/env/JET.env
@@ -99,6 +99,12 @@ elif [ $step = "eupd" ]; then
 
 elif [ $step = "fcst" ]; then
 
+    #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
+    if [[ $CDUMP == "gfs" ]]; then
+        npe_fcst=$npe_fcst_gfs
+        npe_node_fcst=$npe_node_fcst_gfs
+    fi
+
     nth_max=$(($npe_node_max / $npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-$nth_max}
