--- a/env/WCOSS_DELL_P3.env
+++ b/env/WCOSS_DELL_P3.env
@@ -124,6 +124,7 @@ elif [ $step = "fcst" ]; then
     if [[ $CDUMP == "gfs" ]]; then
         npe_fcst=$npe_fcst_gfs
         npe_node_fcst=$npe_node_fcst_gfs
+        nth_fv3=$nth_fv3_gfs
     fi
 
     nth_max=$(($npe_node_max / $npe_node_fcst))
