--- a/env/S4.env
+++ b/env/S4.env
@@ -81,11 +81,8 @@ elif [ $step = "anal" ]; then
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-    export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
 
-    export NTHREADS_CHGRES=${nth_echgres:-1}
-    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
-    export APRUN_CHGRES=""
+    export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
 
 elif [ $step = "gldas" ]; then
 
@@ -134,14 +131,18 @@ elif [ $step = "eupd" ]; then
 
 elif [ $step = "fcst" ]; then
 
+    #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
+    if [[ $CDUMP == "gfs" ]]; then
+        npe_fcst=$npe_fcst_gfs
+        npe_node_fcst=$npe_node_fcst_gfs
+        nth_fv3=$nth_fv3_gfs
+    fi
+
     nth_max=$(($npe_node_max / $npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    if [[ $CDUMP == "gfs" ]]; then
-        npe_fcst=$npe_fcst_gfs
-    fi
     export APRUN_FV3="$launcher -n $npe_fcst"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
