--- a/sorc/syndat_getjtbul.fd/makefile
+++ b/sorc/syndat_getjtbul.fd/makefile
@@ -4,7 +4,7 @@ SHELL=		/bin/sh
 FC=		ifort   
 #DEBUG = 	-ftrapuv  -check all  -fp-stack-check  -fstack-protector
 ##DEBUG = 	-ftrapuv  -fp-stack-check  -fstack-protector
-FFLAGS=		-O3 -g -traceback -assume noold_ldout_format $(DEBUG) $(EXTRA_WORKFLOW_BUILD_FLAGS)
+FFLAGS=		-O3 -g -traceback -assume noold_ldout_format $(DEBUG)
 LDFLAGS=	
 SRCS=		getjtbul.f
 OBJS=		getjtbul.o
