--- a/ush/nems.configure.cpld_wave_aero.IN
+++ b/ush/nems.configure.cpld_wave_aero.IN
@@ -101,7 +101,6 @@ runSeq::
 # CMEPS variables
 
 DRIVER_attributes::
-      mediator_read_restart = @[use_coldstart]
 ::
 MED_attributes::
       ATM_model = @[atm_model]
@@ -111,6 +110,7 @@ MED_attributes::
       history_option = nhours
       history_ymd = -999
       coupling_mode = @[CPLMODE]
+      history_tile_atm = @[ATMTILESIZE]
 ::
 ALLCOMP_attributes::
       ScalarFieldCount = 2
@@ -127,4 +127,7 @@ ALLCOMP_attributes::
       use_coldstart = @[use_coldstart]
       use_mommesh = @[use_mommesh]
       eps_imesh = @[eps_imesh]
+      stop_n = @[FHMAX]
+      stop_option = nhours
+      stop_ymd = -999
 ::
