Add OMP_PLACES=cores for fcst block in WCOSS2.env
- use OMP_PLACES=cores setting based on optimization work for forecast
job on Dogwood

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -103,6 +103,7 @@ elif [ $step = "eupd" ]; then
 
 elif [ $step = "fcst" ]; then
 
+    export OMP_PLACES=cores
     export OMP_STACKSIZE=2048M
     export FI_OFI_RXM_RX_SIZE=40000
     export FI_OFI_RXM_TX_SIZE=40000
