Update FC and LIBS in several makefiles
- update the LIBS setting in enkf_chgres_recenter_nc.fd/makefile
- replace COMP value of "ftn" with "$(FC)" to accept overrides
for different compilers on different platforms
- FC will be set via myFC at upper level

Refs: #665

--- a/sorc/syndat_qctropcy.fd/makefile
+++ b/sorc/syndat_qctropcy.fd/makefile
@@ -1,7 +1,7 @@
 SHELL=		/bin/sh
 #LIBS=		-L/nwprod/lib -lw3nco_v2.0.5_8
 ##LIBS=		-L/contrib/nceplibs/nwprod/lib -lw3nco_v2.0.5_8
-FC=		ftn
+COMP=   $(FC)
 #DEBUG =		-ftrapuv -check all -check noarg_temp_created -fp-stack-check -fstack-protector
 ## if '-check all' enabled, include '-check noarg_temp_created' to avoid warning msgs indicating 
 ##   slight performance hit due to chosen method of passing array arguments to w3difdat  
@@ -14,7 +14,7 @@ CMD=		syndat_qctropcy
 all:		$(CMD)
 
 $(CMD):		$(OBJS)
-		$(FC) $(LDFLAGS) -o $(@) $(OBJS) $(LIBS_SYN_QCT)
+		$(COMP) $(LDFLAGS) -o $(@) $(OBJS) $(LIBS_SYN_QCT)
 
 clean:
 		-rm -f $(OBJS)
