--- a/sorc/syndat_getjtbul.fd/makefile
+++ b/sorc/syndat_getjtbul.fd/makefile
@@ -1,7 +1,7 @@
 SHELL=		/bin/sh
 #LIBS=		-L/nwprod/lib -lw3nco_v2.0.5_4
 #LIBS=		-L/contrib/nceplibs/nwprod/lib -lw3nco_v2.0.5_4
-FC=		ftn
+COMP=   $(FC)
 #DEBUG = 	-ftrapuv  -check all  -fp-stack-check  -fstack-protector
 ##DEBUG = 	-ftrapuv  -fp-stack-check  -fstack-protector
 FFLAGS=		-O3 -g -traceback -assume noold_ldout_format $(DEBUG)
@@ -13,7 +13,7 @@ CMD=		syndat_getjtbul
 all:		$(CMD)
 
 $(CMD):		$(OBJS)
-	$(FC) $(LDFLAGS) -o $(@) $(OBJS) $(LIBS_SYN_GET)
+	$(COMP) $(LDFLAGS) -o $(@) $(OBJS) $(LIBS_SYN_GET)
 
 clean:	
 		-rm -f $(OBJS)
