Run the prep step in parallel on S4 #138

--- a/env/S4.env
+++ b/env/S4.env
@@ -43,7 +43,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     nth_max=$(($npe_node_max / $npe_node_prep))
 
     export POE="NO"
-    export BACK="NO"
+    export BACK="YES"
     export sys_tp="S4"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
