Only turn on DAPL user datagrams for forecast job
Enabling DAPL user datagrams was causing problems in the analysis
on WCOSS for as yet unknown reasons, so the setting was moved out
of the modulefile and into the forecast section of the environment
file. For consistency, this was done for all supported machines
even though the issue only arose on WCOSS.

Refs: #516

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -151,6 +151,7 @@ elif [ $step = "fcst" ]; then
     export NTHREADS_REMAP=${nth_remap:-2}
     [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
     export APRUN_REMAP="$launcher"
+    export I_MPI_DAPL_UD="enable"
 
 elif [ $step = "efcs" ]; then
 
