--- a/env/JET.env
+++ b/env/JET.env
@@ -120,6 +120,7 @@ elif [ $step = "fcst" ]; then
     export NTHREADS_REMAP=${nth_remap:-2}
     [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
     export APRUN_REMAP="$launcher ${npe_remap:-${npe_fcst:-$PBS_NP}}"
+    export I_MPI_DAPL_UD="enable"
 
 elif [ $step = "efcs" ]; then
 
