--- a/parm/chem/CA2G_instance_CA.br.rc
+++ b/parm/chem/CA2G_instance_CA.br.rc
@@ -5,6 +5,9 @@
 aerosol_radBands_optics_file: ExtData/optics/opticsBands_BRC.v1_5.RRTMG.nc
 aerosol_monochromatic_optics_file: ExtData/monochromatic/optics_BRC.v1_5.nc
 
+# Aircraft emission factor: convert input unit to kg C
+aircraft_fuel_emission_factor: 1.0000
+
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
 
@@ -41,3 +44,5 @@ sigma: 2.20  2.20
 nbins: 2
 
 pressure_lid_in_hPa: 0.01
+
+point_emissions_srcfilen: /dev/null
