Restructured classes based one new requirements
Completion of the work by 3/11/22. Given the new requirements last
week, this refactors the ecflow_setup script to handle the configuration
file setup and then all the defintion pieces are handled in the
ecflow_definitions. This also manages the looping structures much
better and adds in some exceptions.

--- a/workflow_generator/ecflow_build.yml
+++ b/workflow_generator/ecflow_build.yml
@@ -19,7 +19,7 @@ suites:
               jgfs_forecast:
                 triggers:
                 - task: jgfs_getic
-                - task: jgfs_atmos_post_manager
+                - task: jgfs_atmos_post_f{ initial_count:2, 3 }
               jgfs_getic:
                 events:
                 - test_event
@@ -36,14 +36,14 @@ suites:
                 jgfs_atmos_post_f{ initial_count:2,env.FHMAX_GFS }:
                   triggers:
                   - task: jgfs_atmos_post_manager
-                    event: "release_post{ }"
+                    event: "release_post{ initial_count:0 }"
                   events:
                   - "test_event"
                   edits:
                     FHRGRP: "{ initial_count:1, increment:6 }"
                     FHRLST: "f{ }"
                     FHR: "f{ increment:6 }"
-                    HR: "{ }"
+                    HR: "{  }"
                     TEST: 'Test Edit'
           wave:
             tasks:
