--- a/workflow_generator/ecflow_build.yml
+++ b/workflow_generator/ecflow_build.yml
@@ -17,6 +17,7 @@ suites:
           atmos:
             tasks:
               jgfs_forecast:
+                repeat: "20220324 to 2022032518 by 10:01:00"
                 triggers:
                 - task: jgfs_getic
                 - task: jgfs_atmos_post_f( 2,1 )
