Dates with repeats added.
This commit was done after the demonstration on 3/29 to the team.
The next steps are to change out the env. for ${} syntax and then
also start trying to put together a suite definition from current
production to identify any possible errors.

Additional tasks are:
- Documentation
- Identify a way to use previously defined variables within the
manifest with $()

--- a/workflow_generator/ecflow_build.yml
+++ b/workflow_generator/ecflow_build.yml
@@ -12,17 +12,17 @@ suites:
         edits:
           NET: 'gfs'
         gfs:
+          repeat: "2022032400 to 2022042400 by 18:0"
           edits:
             RUN: 'gfs'
           atmos:
             tasks:
               jgfs_forecast:
-                repeat: "2022032012 to 2022032618 by 1:6:00"
                 triggers:
                 - task: jgfs_getic
                 - task: jgfs_atmos_post_f( 2,1 )
                 - task: jgfs_forecast
-                  extern: /prod18/enkfgdas/post
+                  suite: fcstplus
               jgfs_getic:
                 events:
                 - test_event
