Add launcher_PREP to env files and cleanup HERA.env
- add launcher_PREP="srun" to Hera and Orion env files
- add launcher_PREP="mpiexec" to WCOSS2 env file
- cleanup prep section of HERA.env to remove unneeded
module unload and load of netcdf

Refs: #665

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -37,9 +37,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export POE="NO"
     export BACK="NO"
     export sys_tp="HERA"
-
-    module unload netcdfp/4.7.4
-    module load netcdf/4.7.0
+    export launcher_PREP="srun"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
     export mpmd="--multi-prog"
