--- a/env/ORION.env
+++ b/env/ORION.env
@@ -41,6 +41,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export POE="NO"
     export BACK=${BACK:-"YES"}
     export sys_tp="ORION"
+    export launcher_PREP="srun"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
 
