--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -27,6 +27,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export POE=${POE:-"YES"}
     export BACK=${BACK:-"off"}
     export sys_tp="wcoss2"
+    export launcher_PREP="mpiexec"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll"  -o $step = "wavepostpnt" ]; then
 
