Update gfspostsnd job resources - oversubscribing
The gfspostsnd job was oversubscribing CPUs on WCOSS2 after updates on
Dogwood. Updating resources settings to get them matching and working.

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -182,7 +182,7 @@ elif [ $step = "fv3ic" ]; then
 elif [ $step = "postsnd" ]; then
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
-    export APRUN_POSTSND="$launcher -n $npe_postsnd --depth=6 --cpu-bind depth"
+    export APRUN_POSTSND="$launcher -n $npe_postsnd --depth=$NTHREADS_POSTSND --cpu-bind depth"
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     export APRUN_POSTSNDCFP="$launcher -np $npe_postsndcfp $mpmd"
 
