updates for wave mesh cap in workflow pointing to new p8c tag of ufs-weather-model updates to intel version removed jlogfiles for wave script/ush (not prgen though)

--- a/ush/nems.configure.atm.IN
+++ b/ush/nems.configure.atm.IN
@@ -1,5 +1,5 @@
 # ESMF #
-logKindFlag:            ESMF_LOGKIND_MULTI
+logKindFlag:            @[esmf_logkind] 
 
 EARTH_component_list: ATM
 ATM_model:            fv3
