Bug fix for ecflow_definitions module
Somehow the previous push reverted some of my changes for the
rework for the triggers. This resulted in a failure in trying
to run the application. This puts the code back that was there
previously and makes the whole thing functional again.

--- a/workflow_generator/prod.yml
+++ b/workflow_generator/prod.yml
@@ -383,6 +383,9 @@ suites:
           post:
             tasks:
               jenkfgdas_post_f( 3,6 ):
+                triggers:
+                  - family: ['enkfgdas/analysis/recenter/ecen', 'enkfgdas/analysis/create']
+                    operand: 'or'
                 template: jenkfgdas_post_master
                 edits:
                   FHMIN_EPOS: ( )
