Add external jobs/JGDAS_GLOBAL_ATMOS_ENSANAL to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,7 @@ jobs/JGDAS_ENKF_SELECT_OBS
 jobs/JGDAS_ENKF_SFC
 jobs/JGDAS_ENKF_UPDATE
 jobs/JGDAS_GLOBAL_ATMOS_ANALYSIS
+jobs/JGDAS_GLOBAL_ATMOS_ENSANAL
 jobs/JGFS_ATMOS_VMINMON
 jobs/JGFS_ATMOS_WAFS
 jobs/JGFS_ATMOS_WAFS_BLENDING
