Update sfcanl in env and setup_workflow.py

--- a/env/JET.env
+++ b/env/JET.env
@@ -4,7 +4,8 @@ if [ $# -ne 1 ]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
-    echo "anal fcst post vrfy metp"
+    echo "atmanalrun atmensanalrun"
+    echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
     exit 1
@@ -44,6 +45,22 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
 
+elif [ $step = "atmanalrun" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_atmanalrun))
+
+    export NTHREADS_ATMANAL=${nth_atmanalrun:-$nth_max}
+    [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
+    export APRUN_ATMANAL="$launcher $npe_atmanalrun"
+
+elif [ $step = "atmensanalrun" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_atmensanalrun))
+
+    export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-$nth_max}
+    [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
+    export APRUN_ATMENSANAL="$launcher $npe_atmensanalrun"
+
 elif [ $step = "anal" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_anal))
@@ -65,9 +82,13 @@ elif [ $step = "anal" ]; then
     npe_gausfcanl=${npe_gausfcanl:-1}
     export APRUN_GAUSFCANL="$launcher $npe_gausfcanl"
 
-    export NTHREADS_CHGRES=${nth_echgres:-1}
-    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
-    export APRUN_CHGRES=""
+elif [ $step = "sfcanl" ]; then
+    nth_max=$(($npe_node_max / $npe_node_sfcanl))
+
+    export NTHREADS_CYCLE=${nth_sfcanl:-14}
+    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
+    npe_sfcanl=${ntiles:-6}
+    export APRUN_CYCLE="$launcher $npe_sfcanl"
 
 elif [ $step = "gldas" ]; then
 
