--- a/env/ORION.env
+++ b/env/ORION.env
@@ -42,7 +42,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export BACK=${BACK:-"YES"}
     export sys_tp="ORION"
 
-elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
+elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
 
     export mpmd="--multi-prog"
     export CFP_MP="YES"
@@ -100,7 +100,6 @@ elif [ $step = "anal" ]; then
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-
     export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
 
 elif [ $step = "sfcanl" ]; then
