rename git checkout of GSI as gsi_enkf.fd to accurately describe what it actually is. update links

--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,8 @@ sorc/ufs_model.fd
 sorc/gfs_post.fd
 sorc/gfs_wafs.fd
 sorc/gldas.fd
-sorc/gsi.fd
+sorc/ncdiag.fd  # TODO - remove once ncdiag becomes a module
+sorc/gsi_enkf.fd
 sorc/gsi_utils.fd
 sorc/gsi_monitor.fd
 sorc/ufs_utils.fd
