update gfs_build.cfg and .gitignore

--- a/sorc/gfs_build.cfg
+++ b/sorc/gfs_build.cfg
@@ -3,7 +3,8 @@
 
  Building ufs_model (ufs_model) ........................ yes
  Building ww3_prepost (ww3_prepost) .................... yes
- Building gsi (gsi) .................................... yes
+ Building gsi_enkf (gsi_enkf) .......................... yes
+ Building gsi_utils (gsi_utils) ........................ yes
  Building gsi_monitor (gsi_monitor) .................... yes
  Building gldas (gldas) ................................ yes
  Building UPP (upp) .................................... yes
@@ -11,6 +12,6 @@
  Building gfs_wafs (gfs_wafs) .......................... yes
  Building workflow_utils (workflow_utils)............... yes
  Building gfs_util (gfs_util) .......................... yes
- 
+
 # -- END --
 
