split Gaussian surface analysis creation into its own job

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -4,7 +4,7 @@ if [ $# -ne 1 ]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
-    echo "anal fcst post vrfy metp"
+    echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
     exit 1
@@ -75,8 +75,15 @@ elif [ $step = "anal" ]; then
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-
     export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
+
+elif [ $step = "sfcanl" ]; then
+    nth_max=$(($npe_node_max / $npe_node_sfcanl))
+
+    export NTHREADS_CYCLE=${nth_sfcanl:-14}
+    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
+    npe_sfcanl=${ntiles:-6}
+    export APRUN_CYCLE="$launcher -n $npe_sfcanl"
 
 elif [ $step = "gldas" ]; then
 
