Improve to add GEFS workflow
 On branch feature/gefs_v13_828_add_ws
	modified:   env/HERA.env
	modified:   env/ORION.env
	modified:   parm/config/config.resources
	modified:   workflow/applications.py
	modified:   workflow/rocoto/workflow_tasks.py
	modified:   workflow/rocoto/workflow_xml.py

Refs: #828

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -137,6 +137,10 @@ elif [ $step = "fcst" ]; then
         npe_fcst=$npe_fcst_gfs
         npe_node_fcst=$npe_node_fcst_gfs
         nth_fv3=$nth_fv3_gfs
+    elif [[ $CDUMP == "gefs" ]]; then
+        npe_fcst=$npe_fcst_gfs
+        npe_node_fcst=$npe_node_fcst_gfs
+        nth_fv3=$nth_fv3_gfs
     fi
 
     nth_max=$(($npe_node_max / $npe_node_fcst))
